scrollable About page

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ body {
   overflow-x: hidden;
 }
 
-/* FirstonthCornell Blog  */
+/* FirstmonthCornell Blog  */
 .small-footer-text p {
   font-size: 7px; /* You can adjust the size as needed */
 }
