--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 1500px;
+  max-width: 100vw;
   margin: 0 auto;
   border-bottom: 1px solid #000000;
   background-color: #7CB9E8;
@@ -52,7 +52,7 @@ body {
   padding: 15px;
   display: flex;
   align-items: center;
-  max-width: 1500px;
+  max-width: 100vw;
   margin: 0 auto;
   border-top: 1px solid #000000;
   border-bottom: 1px solid #000000;
@@ -78,32 +78,3 @@ body {
 .small-footer-text p {
   font-size: 7px; /* You can adjust the size as needed */
 }
-
-/* for some reason the styling for Home.js is broken */
-
-/* 
-.buttonContainer {
-  margin-top: '20px';
-  text-align: 'center';
-}
-.button {
-  background-color: #7CB9E8;
-  color: black;
-  border: 2px solid black;
-  padding: 10px 20px;
-  border-radius: 30px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-}
-.container {
-  background-color: lightblue;
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
-  position: relative;
-} */
