fixed horizontal mobile scrolling issue

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -62,16 +62,18 @@
   }
   
 
-
 /* DISAPPEARING TEXT STYLING */
-  .disappearing-text-container {
+.disappearing-text-container {
     position: absolute;
     top: 17%;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
+    max-width: 100vw;
     text-align: center;
     padding: 10px;
     z-index: 1000;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .disappearing-text {
